DDF-2644 Fix navigation overflow issue, overflow issue in workspace item

--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation/navigation.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation/navigation.less
@@ -3,6 +3,8 @@
   background: @background-color;
   vertical-align: top;
   color: white;
+  height: 60px;
+  overflow: hidden;
 
   > .navigation-left,
   > .navigation-middle,
