--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/workspace-item/workspace-item.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/workspace-item/workspace-item.less
@@ -149,6 +149,7 @@
     padding: 0px 20px;
     white-space: nowrap;
     vertical-align: top;
+    height: @minimumButtonSize;
   }
 
   .choice-actions {
